...
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/security_info" />

        <org.mozilla.focus.widget.SwitchWithDescription
            android:id="@+id/enhanced_tracking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cookie_banner_exception"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/social"
            app:preferenceKey="@string/pref_key_privacy_block_other3"
            app:preferenceKeyTitle="@string/content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/trackers_count"
            style="@style/TrackersCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:theme="@style/SwitchTheme"
            app:layout_constraintStart_toStartOf="parent"
...
