...
    <string name="preference_autocomplete_add_example">Example: example.com</string>

    <!-- Confirmation "snackbar" shown after a new custom autocomplete URL has been added. -->
    <string name="preference_autocomplete_add_confirmation">New custom URL added.</string>

    <!-- Menu item to remove existing autocomplete URLs. -->
    <string name="preference_autocomplete_menu_remove">Remove</string>

    <!-- Content description (not visible, for screen readers etc.): Button that will delete all selected custom autocomplete URLs. -->
    <string name="preference_autocomplete_action_remove_content_description">Remove</string>

    <!-- Error message shown if the entered custom autocomplete URL is not valid or empty. -->
    <string name="preference_autocomplete_add_error">Double-check the URL you entered.</string>
...
    <!-- This preference does not set Focus as the default browser but instead links to Android's
     "default apps" settings screen or if not supported by this Android version to a SUMO page describing
     how to set Focus as a default browser.
      %1$s will be replaced by the app name (e.g. Firefox Focus) -->
    <string name="preference_default_browser2">Make %1$s default browser</string>

    <string name="preference_category_mozilla">Mozilla</string>
    <string name="preference_mozilla_telemetry2">Send usage data</string>

    <!-- A link to SUMO at the end of the summary (preference_mozilla_telemetry_summary2) of the "Send anonymous usage data" setting. -->
    <string name="preference_mozilla_telemetry_summary">Learn more</string>

    <!-- %1$s will be replaced with the name of the app (e.g. Firefox Focus) -->
...
    <string name="preference_libraries_we_use">Libraries that we use</string>

    <!-- Open Source Licenses page title. The first parameter is the app name -->
    <string name="open_source_licenses_title">%s | OSS Libraries</string>

    <!-- Item in Preferences that shows the about page. Parameter 1 is the app name, i.e. Firefox Focus/Firefox Klar. -->
    <string name="preference_about">About %1$s</string>

    <!-- Header for the list of installed search engines -->
    <string name="preference_search_installed_search_engines">Installed search engines</string>

    <!-- Header for the list of installed search engines -->
    <string name="preference_choose_search_engine">Choose search engine</string>
...
    <string name="content_description_trackers_blocked">Number of trackers blocked</string>

    <!-- Content description (not visible, for screen readers etc.): This is the description for the switch in the menu that temporarily disables/enables
         content blocking for the current session -->
    <string name="content_description_blocking_switch">Block trackers</string>

    <string name="your_rights">Your Rights</string>

    <string name="external_app_prompt_title">Open link in another app</string>
    <!-- This string is shown when the user has clicked a link that needs to be opened in a different app.
         Argument 2 is the external app name, argument 1 is our name (i.e. Firefox Focus, or Firefox Klar). -->
    <string name="external_app_prompt">You can leave %1$s to open this link in %2$s.</string>
    <!-- This text is the title of a dialog shown if no app could be found for a custom link protocol. -->
...
    <string name="cookie_banner_the_site_was_reported">Request to support site submitted.</string>

    <!-- Contextual Feature Recommendation Popups -->
    <!-- CFR for Cookie Banner (Banner Info Message). %1$s will be replaced by the app name, %2$s will be an active link using the string cfr_cookie_banner_link as text. -->
    <string name="cfr_cookie_banner">%1$s tries to reject cookie requests to dismiss annoying cookie banners.\n\nManage cookie banner preferences in %2$s.</string>
    <!-- CFR for Cookie Banner (Banner Info Message). This string is used as text for a link in cfr_cookie_banner and takes the user to the app settings. -->
    <string name="cfr_cookie_banner_link">settings</string>

    <!-- Preference for autoplay -->
    <string name="preference_autoplay">Autoplay</string>

    <!-- Heading for the instructions to allow a permission -->
    <string name="phone_feature_blocked_intro">To allow it:</string>
...
    <!-- Title of the preference to enable "HTTPS-Only" mode -->
    <string name="preference_https_only_title">HTTPS-Only Mode</string>
    <!-- Description of the preference to enable "HTTPS-Only" mode. -->
    <string name="preference_https_only_summary3">Automatically attempts to connect to sites using the HTTPS encryption protocol for increased security.</string>

    <!-- Preference for exceptions tracking protection -->
    <string name="preference_exceptions">Exceptions</string>
    <!-- Description for the exceptions preference screen-->
    <string name="preference_exceptions_description">You have disabled content blocking for these websites.</string>
    <!-- Menu item to remove existing exceptions. -->
    <string name="preference_exceptions_menu_remove">Remove</string>
    <!-- Button to remove all websites from the exception list -->
    <string name="preference_exceptions_remove_all_button_label">Remove all websites</string>
...
