...
            android:paddingStart="24dp"
            android:contentDescription="@string/app_name"
            android:focusable="false"
            android:src="@drawable/wordmark2" />

        <org.mozilla.focus.tips.TipsHorizontalCarousel
            android:id="@+id/home_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </org.mozilla.focus.widget.ResizableKeyboardLinearLayout>

    <FrameLayout
...
