<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/about"
        android:title="@string/menu_about" />
    <item
        android:id="@+id/help"
        android:title="@string/menu_help" />
    <item
        android:id="@+id/rights"
        android:title="@string/menu_rights" />
</menu>